--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -8,7 +8,7 @@
         <ScrollView Grid.Row="0">
 
             <VerticalStackLayout
-                Padding="10"
+                Padding="5"
                 Spacing="10">
 
                 <Label
@@ -25,29 +25,48 @@
                     HorizontalOptions="Center"
                     VerticalOptions="Center"
                     />
-                <Image
+                
+                <Grid>
+                    <Image
                     x:Name="imageBottom"
-                    Source="dotnet_bot.png"
-                    HeightRequest="300"
+                    Source="imagebackground.png"
+                    HeightRequest="200"
                     WidthRequest="300"
-                    Aspect="AspectFill"
+                    Aspect="AspectFit"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center"/>
+                    
+                    <Label
+                    x:Name="descriptionImage"
+                    Text="HEI"
                     HorizontalOptions="Center"
                     VerticalOptions="Center"
-    />
+                    FontSize="24"
+                    MaximumWidthRequest="285"
+                    MaximumHeightRequest="175"/>
+                </Grid>
             </VerticalStackLayout>
+            
         </ScrollView>
-        
+       
+
         <HorizontalStackLayout 
                 Grid.Row="1" 
                 Padding="50" 
-                Spacing="150" 
+                Spacing="120" 
                 HorizontalOptions="Center">
-            <Button
-                x:Name="ApproveBtn"
-         />
-            <Button
-                x:Name="DenyBtn"
-         />
+            <ImageButton
+                x:Name="denyBtn"
+                Source="deny.png"
+                WidthRequest="75"
+                HeightRequest="75"
+                />
+            <ImageButton
+                x:Name="approveBtn"
+                Source="approve.png"
+                WidthRequest="75"
+                HeightRequest="75"
+                />
         </HorizontalStackLayout>
     </Grid>
 </ContentPage>
