--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -11,21 +11,37 @@
                 Padding="5"
                 Spacing="10">
 
-                <Label
-                    Text="Swiper"
-                    FontSize="24"
+                <Image
+                    Source="swiper.png"
                     HorizontalOptions="Center"
                     />
-                <Image
+                <Grid>
+                    <Image
                     x:Name="imageTop"
-                    Source="dotnet_bot.png"
+                    Source="imagebackgroundtop.png"
                     HeightRequest="300"
                     WidthRequest="300"
-                    Aspect="AspectFill"
+                    Aspect="AspectFit"
                     HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    />
-                
+                    VerticalOptions="Center"/>
+                    <Image
+                        x:Name="topcat"
+                        Source="cats/cat1.jpg"
+                        MaximumHeightRequest="300"
+                        MaximumWidthRequest="300"/>
+                    <Image
+                        x:Name="border"
+                        Source="borderimg.png"
+                        HeightRequest="300"
+                        WidthRequest="300"
+                        Aspect="AspectFit"/>
+                </Grid>
+                <Label
+                    x:Name="namecat"
+                    Text="HEI"
+                    HorizontalOptions="Center"
+                    FontSize="24"
+                    FontAttributes="Bold"/>
                 <Grid>
                     <Image
                     x:Name="imageBottom"
@@ -35,7 +51,7 @@
                     Aspect="AspectFit"
                     HorizontalOptions="Center"
                     VerticalOptions="Center"/>
-                    
+
                     <Label
                     x:Name="descriptionImage"
                     Text="HEI"
@@ -49,7 +65,6 @@
             
         </ScrollView>
        
-
         <HorizontalStackLayout 
                 Grid.Row="1" 
                 Padding="50" 
@@ -67,6 +82,16 @@
                 WidthRequest="75"
                 HeightRequest="75"
                 />
+        </HorizontalStackLayout>
+        <HorizontalStackLayout
+            Grid.Row="2"
+            HorizontalOptions="Center">
+            <Label
+                x:Name="Footnote"
+                Text="@maggobyte"
+                HorizontalOptions="Center"
+                VerticalOptions="End"/>
+
         </HorizontalStackLayout>
     </Grid>
 </ContentPage>
