--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,7 +9,8 @@
 
             <VerticalStackLayout
                 Padding="5"
-                Spacing="10">
+                Spacing="10"
+                x:Name="stackLayout">
 
                 <Image
                     Source="swiper.png"
@@ -84,6 +85,7 @@
                 Clicked="LoadImage_Click"
                 />
         </HorizontalStackLayout>
+        
         <HorizontalStackLayout
             Grid.Row="2"
             HorizontalOptions="Center">
